Feat: Delete Certificate by id
