# routes/api.php
@@ -22,3 +22,4 @@ Route::middleware('auth:api')->get('/user', function (Request $request) {
 Route::get('certificates', [CertificatesController::class, 'list']);
 Route::post('certificates', [CertificatesController::class, 'store']);
 Route::put('certificates/{id}', [CertificatesController::class, 'update']);
+Route::delete('certificates/{id}', [CertificatesController::class, 'delete']);
